fix: ensure flush output images don't get stretched

--- a/packages/react-saasify/src/components/LiveServiceDemo/styles.module.css
+++ b/packages/react-saasify/src/components/LiveServiceDemo/styles.module.css
@@ -108,7 +108,7 @@
 
 .output img {
   display: block;
-  height: 100%;
+  max-height: 100%;
   max-width: 100%;
   margin: 0 auto;
 }
